[gd_scene load_steps=4 format=3 uid="uid://f61lo1rvo8h"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_pqr06"]
[ext_resource type="Texture2D" uid="uid://dsy0ng02rh1ta" path="res://textures/settings-cog.png" id="2_0yewg"]
[ext_resource type="Texture2D" uid="uid://31ioku7yp413" path="res://textures/cash champions.png" id="2_ghxd5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pqr06")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -60.0
offset_right = 180.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 776.0
offset_top = -476.0
offset_right = 896.0
offset_bottom = -356.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_0yewg")
icon_alignment = 1
expand_icon = true

[node name="Leaderboard" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 80.0
offset_right = 180.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
text = "Leaderboard"

[node name="Logout" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 220.0
offset_right = 180.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
text = "Logout
"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 360.0
offset_right = 180.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="CashChampions" type="Sprite2D" parent="."]
position = Vector2(0, -300)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ghxd5")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="Logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
